--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
         <link rel="stylesheet" href="style.css">
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <title>Weather Dashboard</title>
     </head>
     <body>
         <div class = "container-fluid">
-            <h1 class = "heading text-light bg-primary p-4">Weather Dashboard</h1>
+            <h1 class = "heading text-warning bg-primary p-5 text-center">Weather Dashboard</h1>
         </div>
         <div class = "container">
             <div class = "row">
                 <!-- Search for City -->
-                <div class = "con-0 col-md-3 position-relative">
+                <div class = "con-1 col-md-3 position-relative">
                     <h3>Search for a City:</h3>
-                    <input type = "text" class = "form-control" id = "city-input" placeholder = "Search">
-                    <button type = "button" class = "btn btn-primary col-md-12 mt-3" onclick="onclick_search()">Search</button>
+                    <input type = "text" id = "city-input" placeholder = "Search">
+                    <button type = "button" class = "btn btn-primary col-md-12 mt-4" onclick="onclick_search()">Search</button>
                     <hr />
                     <h6>History:</h3>
                     <div id = "history-list"></div>
-                    <button type = "button" class = "btn btn-danger col-md-11 mt-3 position-absolute bottom-0" onclick="onclick_delete_history()">Delete History</button>
+                    <button type = "button" class = "btn btn-danger col-md-11 position-absolute bottom-0" onclick="onclick_delete_history()">Delete History</button>
                     <!-- TODO: Add buttons -->
                 </div>
                 <!-- City Information -->
-                <div class = "con-0 col-md-9">
-                    <div class = "con-1 row border border-dark m-3 p-3">
+                <div class = "container col-md-9">
+                    <div class = "con-1 row border border-primary m-3 p-3">
                         <div class = "col-md-6"><h3 id = "city-main-card">City:</h3></div>
                         <div class = "col-md-6"><h3 id = "date-main-card">Date:</h3></div>
                         <h6 id = "temp-main-card">Temp:</h6>
@@ -33,7 +34,7 @@
                         <h6 id = "humidity-main-card">Humidity:</h6>
                         <div>
                             <h6 class = "d-inline">UV Index:</h6>
-                            <button class = "d-inline btn btn-success" id = "uvi-main-card">0.00</button>
+                            <button class = "btn" id = "uvi-main-card">0.00</button>
                         </div>
                     </div>
                     <div class = "">
